--- a/Airbnb.ipynb
+++ b/Airbnb.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "<h2 style='text-align: left;'> Project Description </h2>\n",
-    "<p style=\"font-size: 16px; text-align: left;\"> Welcome to New York City, one of the most-visited cities in the world. There are many Airbnb listings in New York City to meet the high demand for temporary lodging for travelers, which can be anywhere between a few nights to many months. In this project, we will take a closer look at the New York Airbnb market by combining data from multiple file types like .csv, .tsv, and .xlsx. </p>"
+    "<p style=\"font-size: 16px; text-align: left;\"> Welcome to New York City, In this project, we will take a closer look at the New York Airbnb market by combining data from multiple file types like .csv, .tsv, and .xlsx. </p>"
    ]
   },
   {
@@ -32,22 +32,21 @@
     "id": "bA5ajAmk7XH6"
    },
    "source": [
-    "Recall that **CSV**, **TSV**, and **Excel** files are three common formats for storing data. \n",
-    "Three files containing data on 2019 Airbnb listings are available to you:\n",
+    "**CSV**, **TSV**, and **Excel** files containing data on 2019 Airbnb listings\n",
     "\n",
-    "**data/airbnb_price.csv**\n",
+    "**airbnb_price.csv**\n",
     "This is a CSV file containing data on Airbnb listing prices and locations.\n",
     "- **`listing_id`**: unique identifier of listing\n",
     "- **`price`**: nightly listing price in USD\n",
     "- **`nbhood_full`**: name of borough and neighborhood where listing is located\n",
     "\n",
-    "**data/airbnb_room_type.xlsx**\n",
+    "**airbnb_room_type.xlsx**\n",
     "This is an Excel file containing data on Airbnb listing descriptions and room types.\n",
     "- **`listing_id`**: unique identifier of listing\n",
     "- **`description`**: listing description\n",
     "- **`room_type`**: Airbnb has three types of rooms: shared rooms, private rooms, and entire homes/apartments\n",
     "\n",
-    "**data/airbnb_last_review.tsv**\n",
+    "**airbnb_last_review.tsv**\n",
     "This is a TSV file containing data on Airbnb host names and review dates.\n",
     "- **`listing_id`**: unique identifier of listing\n",
     "- **`host_name`**: name of listing host\n",
@@ -737,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b534fcb5-f36f-408c-b8b9-818f0d28bd1e",
+   "id": "09337f66-f754-405a-97a7-84eb6bb45fef",
    "metadata": {},
    "outputs": [],
    "source": []
